--- a/pages/poland/rabochaya-visa.html
+++ b/pages/poland/rabochaya-visa.html
@@ -3,10 +3,10 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0,user-scalable=0">
-		<link rel="stylesheet" href="../styles/styles.css">
+		<link rel="stylesheet" href="../../styles/styles.css">
 		<title>West Visa - Сайт по туризму и путешествиям</title>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-		<script src="../telegramform/js/telegramform.js"></script>
+		<script src="../../telegramform/js/telegramform.js"></script>
 	</head>
 	<body>
 		<header>
@@ -50,7 +50,7 @@
 				</ul>
 			</nav>
 			<nav class="menu">
-				<a class="logo" href=""><img src="../images/logo-icon.png">West Visa</a>
+				<a class="logo" href=""><img src="../../images/logo-icon.png">West Visa</a>
 				<ul id="large-menu">
 					<a href=""><li>Главная</li></a>
 					<li class="visa-menu">
@@ -59,7 +59,7 @@
 							<li class="polish-visa">
 								Польская национальная виза
 								<ul class="polish-visa-list">
-									<a href="poland/rabochaya-visa.html"><li>Рабочая виза</li></a>
+									<li>Рабочая виза</li>
 									<li>Гумманитарная виза</li>
 									<li>Студенческая виза</li>
 									<li>Приглашение на работу</li>
@@ -116,7 +116,29 @@
 			</nav>
 		</header>
 		<main>
-
+			<div class="visa-title">
+				<img src="../../images/poland-icon.jpg">
+				<h1>Польская национальная рабочая виза</h1>
+			</div>
+			<div class="visa-wrapper">
+				<div class="visa-block">
+					<div>
+						<img src="../../images/visa-image.jpg">
+						<div class="visa-info">
+							<h3>Информация о визе:</h3>
+							<p><b>Тип подачи:</b> личная</p>
+							<p><b>Срок действия визы:</b> до 5 лет</p>
+							<p><b>Дней пребывания по визе:</b> 90 дней в полугодие</p>
+							<p><b>Период оформления документов:</b> от 1 дня до 1 месяца</p>
+							<p><b>Срок изготовления визы:</b> 7 дней</p>
+							<p><b>Консульский сбор:</b> 35 евро</p>
+							<p><b>Визовый сбор:</b> 11 евро</p>
+							<p><b>Стоимость наших услуг:</b> 290 бел. руб.</p>
+						</div>
+					</div>
+					<button>Оформить заказ на визу</button>
+				</div>
+			</div>
 		</main>
 		<footer>
 			&copy West Visa, 2022
