--- a/pages/poland/studencheskaya-visa.html
+++ b/pages/poland/studencheskaya-visa.html
@@ -59,7 +59,7 @@
 							<li class="polish-visa">
 								Польская национальная виза
 								<ul class="polish-visa-list">
-									<a href="poland/rabochaya-visa.html"><li>Рабочая виза</li></a>
+									<li>Рабочая виза</li>
 									<li>Гумманитарная виза</li>
 									<li>Студенческая виза</li>
 									<li>Приглашение на работу</li>
@@ -116,7 +116,7 @@
 			</nav>
 		</header>
 		<main>
-
+			f
 		</main>
 		<footer>
 			&copy West Visa, 2022
